Dynamic menu filtering by ingredient availability (#23), Task #20
* feat: add dynamic menu filtering with unavailable ingredient tracking

* feat: enhance menu retrieval with unavailable ingredient filtering

* test: add tests for dynamic menu filtering with unavailable ingredients

* fix: eliminate N+1 query in menu filtering

* fix: add IngredientNotFoundException and @Transactional on createProduct

* feat: implement CreateProductRequest and handle product creation with validation

* feat: update createProduct method to use CreateProductRequest with validation

* fix: update tests to match refactored services

* refactor: improve variable naming for clarity in IngredientService and MenuService