@@ -1,10 +1,12 @@
 package com.pizzera.catalog_service.menu;
 
+import com.pizzera.catalog_service.ingredient.Ingredient;
+import com.pizzera.catalog_service.ingredient.LocationIngredientRepository;
 import com.pizzera.catalog_service.location.LocationNotFoundException;
 import com.pizzera.catalog_service.location.LocationRepository;
 import com.pizzera.catalog_service.product.Product;
+import com.pizzera.catalog_service.product.ProductIngredient;
 import com.pizzera.catalog_service.product.ProductRepository;
-import com.pizzera.catalog_service.product.ProductResponse;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -13,6 +15,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.math.BigDecimal;
 import java.time.Instant;
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -27,31 +30,85 @@ public class MenuServiceTest {
     @Mock
     private LocationRepository locationRepository;
 
+    @Mock
+    private LocationIngredientRepository locationIngredientRepository;
+
     @InjectMocks
     private MenuService menuService;
 
     @Test
-    void shouldReturnMenuForExistingLocation() {
+    void shouldReturnAllProductsWhenNoIngredientsAreUnavailable() {
+        // GIVEN
+        Long locationId = 1L;
+        when(locationRepository.existsById(locationId)).thenReturn(true);
+        when(locationIngredientRepository.findUnavailableIngredientIds(locationId))
+                .thenReturn(Collections.emptyList());
+
+        Ingredient mozzarella = new Ingredient(1L, "Mozzarella", null);
+        Ingredient sos = new Ingredient(2L, "Sos", null);
+
+        Product pizza1 = new Product(1L, "Margherita", "Classic", new BigDecimal("25.00"), Instant.now(),
+                List.of(createProductIngredient(mozzarella)));
+        Product pizza2 = new Product(2L, "Pepperoni", "Spicy", new BigDecimal("30.00"), Instant.now(),
+                List.of(createProductIngredient(mozzarella), createProductIngredient(sos)));
+
+        when(productRepository.findAllWithIngredients()).thenReturn(List.of(pizza1, pizza2));
+
+        // WHEN
+        MenuResponse result = menuService.getMenuForLocation(locationId);
+
+        // THEN
+        assertEquals(2, result.products().size());
+        assertEquals(0, result.totalFiltered());
+    }
+
+    @Test
+    void shouldFilterProductsWithUnavailableIngredients() {
         // GIVEN
         Long locationId = 1L;
         when(locationRepository.existsById(locationId)).thenReturn(true);
 
-        Product pizza1 = new Product(1L, "Margherita", "Classic", new BigDecimal("25.00"), Instant.now());
-        Product pizza2 = new Product(2L, "Pepperoni", "Spicy", new BigDecimal("30.00"), Instant.now());
-        when(productRepository.findAll()).thenReturn(List.of(pizza1, pizza2));
+        Ingredient mozzarella = new Ingredient(1L, "Mozzarella", null);
+        Ingredient pepperoni = new Ingredient(2L, "Pepperoni", null);
+
+        when(locationIngredientRepository.findUnavailableIngredientIds(locationId))
+                .thenReturn(List.of(2L));
+
+        Product margherita = new Product(1L, "Margherita", "Classic", new BigDecimal("25.00"), Instant.now(),
+                List.of(createProductIngredient(mozzarella)));
+        Product spicy = new Product(2L, "Pepperoni", "Spicy", new BigDecimal("30.00"), Instant.now(),
+                List.of(createProductIngredient(mozzarella), createProductIngredient(pepperoni)));
+
+        when(productRepository.findAllWithIngredients()).thenReturn(List.of(margherita, spicy));
 
         // WHEN
-        List<ProductResponse> result = menuService.getMenuForLocation(locationId);
+        MenuResponse result = menuService.getMenuForLocation(locationId);
 
         // THEN
-        assertNotNull(result);
-        assertEquals(2, result.size());
-        assertEquals("Margherita", result.get(0).name());
-        assertEquals("Pepperoni", result.get(1).name());
-        assertEquals(new BigDecimal("25.00"), result.get(0).price());
+        assertEquals(1, result.products().size());
+        assertEquals("Margherita", result.products().getFirst().name());
+        assertEquals(1, result.totalFiltered());
+    }
 
-        verify(locationRepository, times(1)).existsById(locationId);
-        verify(productRepository, times(1)).findAll();
+    @Test
+    void shouldReturnAllProductsWhenLocationHasNoAvailabilityData() {
+        // GIVEN
+        Long locationId = 1L;
+        when(locationRepository.existsById(locationId)).thenReturn(true);
+        when(locationIngredientRepository.findUnavailableIngredientIds(locationId))
+                .thenReturn(Collections.emptyList());
+
+        Product pizza = new Product(1L, "Margherita", "Classic", new BigDecimal("25.00"), Instant.now(),
+                List.of(createProductIngredient(new Ingredient(1L, "Mozzarella", null))));
+
+        when(productRepository.findAllWithIngredients()).thenReturn(List.of(pizza));
+
+        // WHEN
+        MenuResponse result = menuService.getMenuForLocation(locationId);
+
+        // THEN
+        assertEquals(1, result.products().size());
+        assertEquals(0, result.totalFiltered());
     }
 
     @Test
@@ -60,15 +117,17 @@ public class MenuServiceTest {
         Long locationId = 999L;
         when(locationRepository.existsById(locationId)).thenReturn(false);
 
-        // WHEN
+        // WHEN & THEN
         LocationNotFoundException exception = assertThrows(LocationNotFoundException.class, () -> {
             menuService.getMenuForLocation(locationId);
         });
 
-        // THEN
         assertEquals("Location with ID 999 not found", exception.getReason());
-
         verify(locationRepository, times(1)).existsById(locationId);
-        verify(productRepository, never()).findAll();
+        verify(productRepository, never()).findAllWithIngredients();
+    }
+
+    private ProductIngredient createProductIngredient(Ingredient ingredient) {
+        return new ProductIngredient(ingredient);
     }
 }
